[package]
name = "riskly"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12.3"
prost = "0.13.5"
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
async-trait = "0.1.88"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.12.3"


[[bin]]
name = "riskly-server"
path = "src/main.rs"
